# alpine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  alpine.sln
application/: application.vcxproj  main.cpp
applications/rtcamp9/: CMakeLists.txt  main.cpp  rtcamp9.vcxproj
applications/simple/: CMakeLists.txt  main.cpp  simple.vcxproj
applications/viewer/: CMakeLists.txt  main.cpp  viewer.vcxproj
include/: alpine.h  i_camera.h  i_light.h
include/alpine/: alpine.h  camera.h  light.h
src/: CMakeLists.txt  alpine.cpp  alpine.vcxproj  alpine.vcxproj.filters  alpine_config.h  animation.cpp  animation.h  camera.cpp  camera.h  debug_scene.cpp  debug_scene.h  disk_light.cpp  disk_light.h  embree.cpp  environment_map.cpp  environment_map.h  file_loader.h  gltf_loader.cpp  image.cpp  image.h  intersection.h  kernel.h  lambertian.cpp  lambertian.h  light.cpp  light.h  material.h  matrix.h  matte.cpp  matte.h  mesh.cpp  mesh.h  metal.cpp  metal.h  microfacet.cpp  microfacet.h  obj_converter.cpp  obj_converter.h  obj_loader.cpp  point_light.cpp  (+13 more)
src/accelerators/: accelerator.h  bvh.cpp  bvh.h  bvh4.cpp  bvh4.h  bvh4_dummy.cpp  bvh_common.cpp  bvh_common.h  embree.cpp  embree.h  embree_dummy.cpp  wide_bvh.cpp  wide_bvh.h  wide_bvh_builder.cpp  wide_bvh_builder.h  wide_bvh_dummy.cpp
src/accelerators/bvh/: bvh.cpp
src/accelerators/embree/: dummy.cpp  embree.cpp
src/accelerators/ispc/: bvh.ispc
src/denoisers/: denoiser.h  dummy.cpp  oidn.cpp
src/ispc/: bounding_box.ispc  ispc_config.h  triangle.ispc
src/kernel/: embree.cpp  kernel.h
src/light_samplers/: bvh_light_sampler.cpp  bvh_light_sampler.h  light_sampler.h  power_light_sampler.cpp  power_light_sampler.h  uniform_light_sampler.cpp  uniform_light_sampler.h
src/lights/: disk_light.cpp  disk_light.h  light.h  lightcuts.cpp  lightcuts.h  point_light.cpp  point_light.h
src/loaders/: file_loader.h  gltf_loader.cpp  hdr_loader.cpp  obj_loader.cpp
src/materials/: bsdf.h  conductor.cpp  conductor.h  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  matte.cpp  matte.h  metal.cpp  metal.h  microfacet.cpp  microfacet.h
src/math/: matrix.h  vector.h
src/scenes/: debug_scene.cpp  debug_scene.h  scene.h
src/shapes/: mesh.cpp  mesh.h  shape.h  sphere.cpp  sphere.h
src/utils/: alias_table.cpp  alias_table.h  bounding_box.h  bvh_util.h  util.cpp  util.h
